# clipbud

./: .gitattributes  .gitignore  Cargo.toml  README.md  config.yml
.github/workflows/: ci.yml  release.yml  ubuntu-install-packages
assets/: demo.mov
pkg/: macos.sh  release.py
src/: main.rs
src/ai/: action.rs  default-config.yml  mod.rs  system.md
src/clipboard/: mod.rs
src/config/: action.rs  mod.rs
src/ui/: config.rs  dialogs.rs  mod.rs  spinner.rs  tray.rs
