[package]
name = "clipbud"
description = "AI powered clipboard assistant"
keywords = ["ai", "clipboard", "assistant"]
version = "0.1.0"
authors = ["Simone Margaritelli <evilsocket@gmail.com>"]
license = "GPL-3.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/evilsocket/clipbud"
homepage = "https://github.com/evilsocket/clipbud"

[dependencies]
clipboard-rs = "0.3.0"
ctrlc = "3.4.7"
mouse_position = "0.1.4"
eframe = "0.32.2"
egui = "0.32.2"
rig-core = "0.19.0"
tokio = { version = "1.47.1", features = ["full", "rt"] }
tray-icon = "0.21.1"
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
serde_yaml = "0.9.34"
serde = "1.0.219"
shellexpand = "3.1.1"
global-hotkey = "0.7.0"
single-instance = "0.3.3"
image = "0.25.8"

[build-dependencies]
winres = "0.1"

[profile.release]
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary

[profile.deb]
inherits = "release"
debug = false

[package.metadata.deb]
maintainer = "Simone Margaritelli <evilsocket@gmail.com>"
license-file = ["LICENSE", "0"]
section = "utils"
priority = "optional"
assets = [
  ["target/release/clipbud", "usr/bin/", "755"],
  ["LICENSE", "usr/share/doc/clipbud/", "644"],
  ["README.md", "usr/share/doc/clipbud/README", "644"]
]
extended-description = """\
Clipbud is a AI powered clipboard assistant.
"""

[package.metadata.winres]
OriginalFilename = "clipbud.exe"
LegalCopyright = "Copyright Simone Margaritelli © 2025"
FileDescription = "AI powered clipboard assistant"

[package.metadata.bundle]
name = "Clipboard Buddy"
identifier = "net.evilsocket.clipbud"
icon = ["assets/icon-256.png"]
resources = ["assets", "assets/*.*"]
copyright = "Copyright (c) Simone Margaritelli © 2025. All rights reserved."
category = "Productivity"
short_description = "AI powered clipboard assistant"
long_description = """
Clipboard Buddy is a AI powered clipboard assistant.
"""
deb_depends = ["libgtk-3"]
osx_url_schemes = ["net.evilsocket.clipbud"]

